fixed a few things reported by findbugs